[package]
name = "embassy-nrf"
version = "0.1.0"
edition = "2021"

[dependencies]
embedded-hal = "0.2.7"
cortex-m = "0.7.5"
cortex-m-rt = "0.7.1"
embedded-graphics = "0.7.1"
futures = { version = "0.3.21", default-features = false }
embassy = { version = "0.1.0", git = "https://github.com/embassy-rs/embassy", features = [
    "defmt",
    "unstable-traits",
] }
embassy-nrf = { version = "0.1.0", git = "https://github.com/embassy-rs/embassy", features = [
    "nightly",
    "unstable-traits",
    "defmt",
    "nrf52840",
    "gpiote",
    "time-driver-rtc1"
] }
defmt = "0.3.2"
defmt-rtt = "0.3.2"
smart-leds = "0.3.0"
panic-probe = "0.3.0"

[patch.crates-io]
embassy = { git = "https://github.com/embassy-rs/embassy" }
embassy-nrf = { git = "https://github.com/embassy-rs/embassy" }
embassy-macros = { git = "https://github.com/embassy-rs/embassy" }
nrf-softdevice = { git = "https://github.com/embassy-rs/nrf-softdevice" }

[profile.dev]
codegen-units = 1
incremental = false

[profile.release]
codegen-units = 1
debug = true
lto = true
