[package]
name = "nrf52840-feather"
version = "0.1.0"
edition = "2021"

[features]
default = ["ble-gatt-server"]
ble-gatt-server = ["nrf-softdevice/ble-gatt-server"]

[dependencies]
embassy = { version = "0.1.0", git = "https://github.com/embassy-rs/embassy", features = [
    "defmt",
    "unstable-traits",
] }
embassy-nrf = { version = "0.1.0", git = "https://github.com/embassy-rs/embassy", features = [
    "nightly",
    "unstable-traits",
    "defmt",
    "nrf52840",
    "gpiote",
    "time-driver-rtc1"
] }
cortex-m = "0.7.5"
cortex-m-rt = "0.7.1"
defmt = "0.3.2"
nrf-softdevice-defmt-rtt = { version = "0.1.0", git = "https://github.com/embassy-rs/nrf-softdevice" }
panic-probe = { version = "0.3.0", features = ["print-defmt"] }
nrf-softdevice = { version = "0.1.0", git = "https://github.com/embassy-rs/nrf-softdevice", features = [
    "defmt",
    "nrf52840",
    "s140",
    "ble-peripheral",
    "critical-section-impl"
] }
nrf-softdevice-s140 = { version = "0.1.1", git = "https://github.com/embassy-rs/nrf-softdevice" }
futures = { version = "0.3.21", default-features = false, features = [
    "async-await"
] }
embedded-hal = "0.2.7"
embedded-hal-async = { version = "0.1.0-alpha.0" }
embedded-graphics = "0.7.1"
ssd1680 = { version = "0.1.0", git = "https://github.com/jacobrosenthal/ssd1680-rs.git" }
heapless = "0.7.14"

[patch.crates-io]
embassy = { git = "https://github.com/embassy-rs/embassy" }
embassy-nrf = { git = "https://github.com/embassy-rs/embassy" }
embassy-macros = { git = "https://github.com/embassy-rs/embassy" }
nrf-softdevice = { git = "https://github.com/embassy-rs/nrf-softdevice" }
nrf-softdevice-defmt-rtt = { git = "https://github.com/embassy-rs/nrf-softdevice" }
nrf-softdevice-s140 = { git = "https://github.com/embassy-rs/nrf-softdevice" }

# for cargo flash
[package.metadata]
chip = "nRF52840_xxAA"

[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = 3
overflow-checks = true

[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = "fat"
opt-level = 's'
overflow-checks = false

# do not optimize proc-macro crates = faster builds from scratch
[profile.dev.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false

[profile.release.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false
