[package]
name = "nrf52840-feather"
version = "0.1.0"
edition = "2021"

[dependencies]
embassy-executor = { version = "0.1.0", git = "https://github.com/embassy-rs/embassy", features = [
    "defmt",
    "integrated-timers",
    "nightly"
] }
embassy-util = { version = "0.1.0", git = "https://github.com/embassy-rs/embassy", features = [
    "defmt",
] }
embassy-time = { version = "0.1.0", git = "https://github.com/embassy-rs/embassy", features = [
    "defmt",
    "nightly",
    "unstable-traits"
] }
embassy-nrf = { version = "0.1.0", git = "https://github.com/embassy-rs/embassy", features = [
    "nightly",
    "unstable-traits",
    "defmt",
    "nrf52840",
    "gpiote",
    "time-driver-rtc1"
] }
embassy-macros = { git = "https://github.com/embassy-rs/embassy" }
cortex-m = { version = "0.7.6", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.1"
defmt = "0.3"
defmt-rtt = "0.3"
panic-probe = { version = "0.3.0", features = ["print-defmt"] }
embedded-hal = "0.2.7"
embedded-hal-async = { version = "0.1.0-alpha.1" }
embedded-graphics = "0.7.1"
ssd1680 = { version = "0.1.0", git = "https://github.com/jacobrosenthal/ssd1680-rs.git" }
heapless = "0.7.16"

# for cargo flash
[package.metadata]
chip = "nRF52840_xxAA"

[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = 3
overflow-checks = true

[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = "fat"
opt-level = 's'
overflow-checks = false

# do not optimize proc-macro crates = faster builds from scratch
[profile.dev.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false

[profile.release.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false
